test/assertTypeError.slq

def main(){
	x:=H(0:ğ”¹);
	assert(x); // error
	return x;
}
